fixed z-index bug

--- a/source/_assets/makotokw2015/stylesheets/_layout.scss
+++ b/source/_assets/makotokw2015/stylesheets/_layout.scss
@@ -14,6 +14,7 @@
 }
 
 .menu-top {
+  position: relative;
   font-family: 'NovecentowideBookBold';
 }
 
